# ddd-To-Do

./: .gitignore  Makefile  README.md  pyproject.toml
ToDo/: Dockerfile  main.py
ToDo/src/api/: dependencies.py  handlers.py  schemas.py
ToDo/src/application/: init.py
ToDo/src/application/commands/: base.py  commands.py  handlers.py
ToDo/src/application/mediator/: base.py  command.py  querie.py
ToDo/src/application/queries/: base.py  handlers.py  queries.py
ToDo/src/core/entities/: base.py  task.py
ToDo/src/core/exceptions/: base.py  task.py
ToDo/src/infra/: database.py
ToDo/src/infra/models/: models.py
ToDo/src/infra/repositories/: base.py  converters.py  task_sql.py
UrlShortner/: Dockerfile  main.py
UrlShortner/src/api/: handlers.py  schemas.py  utils.py
UrlShortner/src/db/: database.py  url_shortener.db
UrlShortner/src/requests/: entities.py  requests.py
UrlShortner/src/services/: url_shortner.py
