[tool.poetry]
name = "ddd-to-do"
version = "0.1.0"
description = ""
authors = ["Bogdan Babiychuk <babiychuk.bogdan@mail.ru>"]
readme = "README.md"
packages = [{ include = "ToDo" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.128.0,<0.129.0"
uvicorn = ">=0.40.0,<0.41.0"
sqlalchemy = ">=2.0.45,<3.0.0"
punq = ">=0.7.0,<0.8.0"
aiosqlite = ">=0.22.1,<0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
